--- a/.github/workflows/push_line.yml
+++ b/.github/workflows/push_line.yml
@@ -2,29 +2,30 @@ name: Push Stock Info to LINE
 
 on:
   schedule:
-    - cron: '0 1 * * *'   # 台灣時間 09:00
-    - cron: '0 4 * * *'   # 台灣時間 12:00
-    - cron: '30 7 * * *'  # 台灣時間 15:30
-  workflow_dispatch:      # 手動觸發支援
+    # 每天台灣時間 16:00（UTC 時間為 08:00）
+    - cron: '0 8 * * *'
+  workflow_dispatch:
 
 jobs:
-  push:
+  push-line-message:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout Repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: '3.11'
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-      - name: Run push script
+      - name: Run script to push stock message
         env:
           LINE_CHANNEL_ACCESS_TOKEN: ${{ secrets.LINE_CHANNEL_ACCESS_TOKEN }}
           LINE_USER_ID: ${{ secrets.LINE_USER_ID }}
-          FINMIND_TOKEN: ${{ secrets.FINMIND_TOKEN }}
         run: python push_stocks.py
